start of the second section + adding details

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vivid Fusion</title>
 </head>
 <body>
+    <!-- Hero Section-->
     <section class="hero">
         <nav class="container">
             <div>
@@ -21,14 +22,48 @@
 
         <div class="container main">
             <div>
-                <h1>Hello my name is Tasos and i am a Full-stack Developer</h1>
+                <h1>Hello my name is Tasos and i am a <span class="main-word">Full-stack Developer</span></h1>
                 <p>i am also doing photoshop for a long time and i think this combination is a killer!</p>
                 <button>Sign up</button>
             </div>
             <img src="./img/main.jpg" alt="">
-
+        </div>
+        <div class="icon-box">
+          <a href="#" rel="">
+            <i class="fa-solid fa-angles-down fa-beat fa-xl icon" style="color: #47d19a;"></i>
+          </a>
         </div>
     </section>
-    
+    <!--End Hero Section-->
+    <section class="information">
+        <h2>My Skills</h2>
+        <div class="information-content">
+            <div>
+                <i class="fa-brands fa-html5 fa-2xl icon-information" style="color: #20a761;"></i>
+                <ol class="ol-html">
+                    <li><strong>Semantic Markup</strong></li>
+                    <li><strong>Clean and Efficient Code</strong></li>
+                    <li><strong>Responsive Design</strong></li>
+                    <li><strong>Accessibility</strong></li>
+                    <li><strong>Integration with Other Technologies</strong></li>
+                </ol>
+            </div>
+            <div>
+                <i class="fa-brands fa-css3 fa-2xl icon-information" style="color: #20a761;"></i>
+                <p></p>
+            </div>
+            <div>
+                <i class="fa-solid fa-camera fa-2xl icon-information" style="color: #20a761;"></i>
+                <p></p>
+            </div>
+            <div>
+                <i class="fa-brands fa-square-js fa-2xl icon-information" style="color: #20a761;"></i>
+                <p></p>
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://kit.fontawesome.com/34a18e24da.js" crossorigin="anonymous"></script>
 </body>
 </html>
