end of information section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Vivid Fusion</title>
 </head>
@@ -40,27 +43,27 @@
         <div class="information-content">
             <div>
                 <i class="fa-brands fa-html5 fa-2xl icon-information" style="color: #20a761;"></i>
-                <ol class="ol-html">
-                    <li><strong>Semantic Markup</strong></li>
-                    <li><strong>Clean and Efficient Code</strong></li>
-                    <li><strong>Responsive Design</strong></li>
-                    <li><strong>Accessibility</strong></li>
-                    <li><strong>Integration with Other Technologies</strong></li>
-                </ol>
+                <p>I'm dedicated to staying current with web standards and emerging trends in HTML5, CSS3, and more, ensuring that I can provide you with the most up-to-date solutions for your web development needs.</p>
             </div>
             <div>
                 <i class="fa-brands fa-css3 fa-2xl icon-information" style="color: #20a761;"></i>
-                <p></p>
+                <p>Beyond the technical aspects, my approach to CSS is marked by a deep appreciation for design aesthetics and user-centered principles. I don't merely apply styles; I craft immersive and memorable experiences that leave a lasting impact on your audience.</p>
             </div>
             <div>
                 <i class="fa-solid fa-camera fa-2xl icon-information" style="color: #20a761;"></i>
-                <p></p>
+                <p>The harmonious combination of Photoshop and web development is where my creativity shines. Every project is a canvas where I merge aesthetics, technical precision, and storytelling to craft a digital masterpiece that aligns with your brand's identity and resonates with your audience.</p>
             </div>
             <div>
                 <i class="fa-brands fa-square-js fa-2xl icon-information" style="color: #20a761;"></i>
-                <p></p>
+                <p>I understand the power of collaboration and effective communication. Your vision is central to my development process, and I work closely with you to ensure that JavaScript solutions align perfectly with your brand and objectives.</p>
             </div>
         </div>
+    </section>
+    <section class="quote">
+        <div class="container">
+            <p>"Web development is not just about creating a website; it's about crafting a digital experience that leaves a lasting impression and empowers the world with your vision."</p>
+        </div>
+
     </section>
 
 
