end of quote Section

--- a/index.html
+++ b/index.html
@@ -43,25 +43,26 @@
         <div class="information-content">
             <div>
                 <i class="fa-brands fa-html5 fa-2xl icon-information" style="color: #20a761;"></i>
-                <p>I'm dedicated to staying current with web standards and emerging trends in HTML5, CSS3, and more, ensuring that I can provide you with the most up-to-date solutions for your web development needs.</p>
+                <p>I'm dedicated to staying current with web standards and emerging trends in HTML5, CSS3, and more</p>
             </div>
             <div>
                 <i class="fa-brands fa-css3 fa-2xl icon-information" style="color: #20a761;"></i>
-                <p>Beyond the technical aspects, my approach to CSS is marked by a deep appreciation for design aesthetics and user-centered principles. I don't merely apply styles; I craft immersive and memorable experiences that leave a lasting impact on your audience.</p>
+                <p>Beyond the technical aspects, my approach to CSS is marked by a deep appreciation for design aesthetics and user-centered principles.</p>
             </div>
             <div>
                 <i class="fa-solid fa-camera fa-2xl icon-information" style="color: #20a761;"></i>
-                <p>The harmonious combination of Photoshop and web development is where my creativity shines. Every project is a canvas where I merge aesthetics, technical precision, and storytelling to craft a digital masterpiece that aligns with your brand's identity and resonates with your audience.</p>
+                <p>The harmonious combination of Photoshop and web development is where my creativity shines.</p>
             </div>
             <div>
                 <i class="fa-brands fa-square-js fa-2xl icon-information" style="color: #20a761;"></i>
-                <p>I understand the power of collaboration and effective communication. Your vision is central to my development process, and I work closely with you to ensure that JavaScript solutions align perfectly with your brand and objectives.</p>
+                <p>I bring your digital ideas to life with the power of JavaScript. Explore my work and witness the magic of JavaScript in action.</p>
             </div>
         </div>
     </section>
     <section class="quote">
-        <div class="container">
-            <p>"Web development is not just about creating a website; it's about crafting a digital experience that leaves a lasting impression and empowers the world with your vision."</p>
+        <div class="container quote-box">
+            <blockquote class="quote-content">"Web development is not just about creating a website it's about crafting a digital experience that leaves a lasting impression and empowers the world with your vision."</blockquote>
+            <address>-anonymous</address>
         </div>
 
     </section>
