fixing some details about the exercise specs

--- a/index.html
+++ b/index.html
@@ -46,18 +46,22 @@
         <div class="information-content">
             <div>
                 <i class="fa-brands fa-html5 fa-2xl icon-information" style="color: #20a761;"></i>
+                <h4>HTML5</h4>
                 <p>I'm dedicated to staying current with web standards and emerging trends in HTML5, CSS3, and more</p>
             </div>
             <div>
                 <i class="fa-brands fa-css3 fa-2xl icon-information" style="color: #20a761;"></i>
+                <h4>CSS3</h4>
                 <p>Beyond the technical aspects, my approach to CSS is marked by a deep appreciation for design aesthetics and user-centered principles.</p>
             </div>
             <div>
                 <i class="fa-solid fa-camera fa-2xl icon-information" style="color: #20a761;"></i>
+                <h4>Photoshop</h4>
                 <p>The harmonious combination of Photoshop and web development is where my creativity shines.</p>
             </div>
             <div>
                 <i class="fa-brands fa-square-js fa-2xl icon-information" style="color: #20a761;"></i>
+                <h4>JavaScript</h4>
                 <p>I bring your digital ideas to life with the power of JavaScript. Explore my work and witness the magic of JavaScript in action.</p>
             </div>
         </div>
