refactor: Update landing page header structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <main>
+    <header>
       <nav>
         <div class="logo-container">
           <p class="logo-content">Header Logo</p>
@@ -25,6 +25,6 @@
           <a class="nav-link" href="#">Header link three</a>
         </div>
       </nav>
-    </main>
+    </header>
   </body>
 </html>
