feat: Add hero section to landing page

--- a/index.html
+++ b/index.html
@@ -26,5 +26,20 @@
         </div>
       </nav>
     </header>
+    <main>
+      <div class="hero-container">
+        <section class="hero-section">
+          <div class="hero-content">
+            <h1 class="hero-main">This website is awesome</h1>
+            <p class="hero-secondary">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatibus nam quo eum, molestiae recusandae aspernatur
+            </p>
+            <button class="hero-btn">Sign up</button>
+          </div>
+          <div class="hero-img"></div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
