refactor: Adjust hero section height

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <h1 class="hero-main">This website is awesome</h1>
             <p class="hero-secondary">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatibus nam quo eum, molestiae recusandae aspernatur
+              Voluptatibus nam quo eum, molestiae recusandae aspernatur nam quo
+              eum, molestiae recusandae aspernatur
             </p>
             <button class="hero-btn">Sign up</button>
           </div>
