feat: add info section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,34 @@
           <div class="hero-img"></div>
         </section>
       </div>
+      <section class="info-section">
+        <h2 class="info-title">Some random information.</h2>
+        <div class="info-container">
+          <div class="info-boxes">
+            <div class="photo-box"></div>
+            <div class="info-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.  
+            </div>
+          </div>
+          <div class="info-boxes">
+            <div class="photo-box"></div>
+            <div class="info-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </div>
+          </div>
+          <div class="info-boxes">
+            <div class="photo-box"></div>
+            <div class="info-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          </div>
+          </div>
+          <div class="info-boxes">
+            <div class="photo-box"></div>
+            <div class="info-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
