--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
           </div>
         </div>
       </section>
+      <section class="testimonial">
+        <div class="testimonial-container">
+          <figure>
+            <em>
+              This is an inspiring quote, or a testimonial from a customer.
+              Maybe it's just filling up space, or maybe people will actually
+              read it. Who knows? All i know is that it looks nice.</em
+            >
+            <figcaption><strong>-Thor, God of Thunder</strong></figcaption>
+          </figure>
+        </div>
+      </section>
     </main>
   </body>
 </html>
