--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
           </figure>
         </div>
       </section>
+      <section class="cta">
+        <div class="cta-container">
+          <div class="cta-content">
+            <h3>Call to action! It's time!</h3>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
+          <button class="cta-btn">Sign up</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
