feat: Add footer section

--- a/index.html
+++ b/index.html
@@ -94,5 +94,8 @@
         </div>
       </section>
     </main>
+    <footer>
+      <p>Copyright &copy; The Odin Project 2024</p>
+    </footer>
   </body>
 </html>
